# chatty

./: README.md  pyproject.toml
src/chatty/: data.py  main.py  prompt.py  store.py
