[tool.poetry]
name = "chatty"
version = "0.1.0"
description = ""
authors = ["Leandro Correia <leandro.correia@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.2.1"
langchain-openai = "^0.1.8"
python-dotenv = "^1.0.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
